# Cillin_Cg

./: .gitignore  README.md
Code/cillin_engine/: Cargo.toml  build.rs  scene_data.json
Code/cillin_engine/cpp/: cem.cpp  sdf_logic.cpp  sdf_logic.hpp
Code/cillin_engine/cpp/cem/: cem_compiler_v1.cpp  cem_compiler_v2.cpp  cem_compiler_v3.cpp  cem_compiler_v5.cpp  cem_compiler_v6.cpp  cem_compiler_v7.cpp  cgltf.h  command.md
Code/cillin_engine/cpp/sdf/: sdf_logic.cpp  sdf_logic.hpp
Code/cillin_engine/html/: ColMap.txt  ColMap1.txt  ColMap2.txt  H.txt  cpalcolor_h.html  cpalcolor_s.html
Code/cillin_engine/html/OLD/: ColLine1.txt  ColLine2.txt  ColLine3.txt
Code/cillin_engine/python/: createprompt.py  inspect_cem.py
Code/cillin_engine/python/colo/: #keyness_2d_generator.py  gmm_params.txt  hue_keyness_fitting.py  keyness_2d_validate.py  mixmap.py  sat_sensitivity_fit_1.py  sat_sensitivity_fit_2.py  sat_sensitivity_fit_mix.py
Code/cillin_engine/python/debugcem/: inspect_64cem_color.py  inspect_cem.py
Code/cillin_engine/python/prompt/: prompt.txt
Code/cillin_engine/src/: Dal.md  command.md  lib.rs  main.rs  pr.md  shader.wgsl
Code/cillin_engine/src/OLD/: OLD_main.rs
Code/cillin_engine/src/camera/: mod.rs
Code/cillin_engine/src/console/: mod.rs
Code/cillin_engine/src/core/: mod.rs
Code/cillin_engine/src/editor/: mod.rs
Code/cillin_engine/src/input/: mod.rs
Code/cillin_engine/src/models/: mod.rs
Code/cillin_engine/src/rendering/: mod.rs  pipeline.rs
Code/cr_sculpt/: Cargo.toml
Code/cr_sculpt/src/: main.rs  math.rs  sculpt.wgsl
(+35 files in other folders)
